Update spacing issue

--- a/assets/sass/pages/_community-ebooks.scss
+++ b/assets/sass/pages/_community-ebooks.scss
@@ -260,10 +260,14 @@
   }
 }
 
+.community-ebooks-screen4 {
+  margin-bottom: 100px;
+}
+
 .community-ebooks-screen2,
 .community-ebooks-screen4 {
   .texts-container {
-    padding-top: 150px;
+    padding-top: 0;
     padding-bottom: 100px;
 
     text-align: center;
